<resources>
    <string name="app_name">MoviesApp</string>
    <string name="movie_img_content_description">Movie poster</string>
    <string name="dummy_movie_title">The Dummy movie</string>
    <string name="dummy_movie_overview">This is a dummy overview about the dummy movie</string>
    <string name="original_language">Original language: %1$s</string>
    <string name="original_title">Original title: %1$s</string>
    <string name="popularity">Popularity: %1$f</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="vote_average">Vote average: %1$f</string>
    <string name="no_remote_message">It was not possible to load the moves from the remote source</string>
    <string name="btn_load_local">Load local data</string>
</resources>