<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MovieDetailActivity">

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie_img_content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="6dp"
        android:text="@string/dummy_movie_title"
        app:layout_constraintTop_toBottomOf="@id/posterImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtOriginalLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/original_language"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtOriginalTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/original_title"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtOriginalLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtPopularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtOriginalTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtReleaseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/release_date"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtPopularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtVoteAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote_average"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/txtReleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>