<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_margin="12dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movieImg"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_margin="6dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="122dp"
            tools:layout_editor_absoluteY="30dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/movie_img_content_description" />
        <TextView
            android:id="@+id/txtMovieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/dummy_movie_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movieImg"/>
        <TextView
            android:id="@+id/txtMovieDescription"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/dummy_movie_overview"
            app:layout_constraintTop_toBottomOf="@id/txtMovieTitle"
            app:layout_constraintStart_toEndOf="@id/movieImg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>